--- a/u4361u4454u4368u4467u4520-u4366u4453u4535u4361u4449u4520-u4367u4453u4523u4361u4453u4527u4368u4469u4540.html
+++ b/u4361u4454u4368u4467u4520-u4366u4453u4535u4361u4449u4520-u4367u4453u4523u4361u4453u4527u4368u4469u4540.html
@@ -198,10 +198,10 @@
   </div>
   <script>
     // Select the div by the ID you added
-    var mainButton = document.getElementById('main-button');
+    var consultationButton = document.getElementById('main-button');
 
     // Add click event listener to the div
-    mainButton.addEventListener('click', function () {
+    consultationButton.addEventListener('click', function () {
       // Change the window location to the URL of the page you want to open
       window.location.href = 'u4358u4454u4363u4469u4523u4369u4454u4363u4469u4364u4469-u4361u4449u4540u4355u4449u4535.html';
     });
@@ -211,7 +211,7 @@
     // Add click event listener to the div
     consultationButton.addEventListener('click', function () {
       // Change the window location to the URL of the page you want to open
-      window.location.href = 'u4352u4461u4363u4466u4520u4366u4453u4527u4370u4449u4520.html';
+      window.location.href = 'u4361u4449u4540u4355u4449u4535u4361u4469u4523u4366u4453u4540.html';
     });
 
     // Select the div by the ID you added
@@ -239,6 +239,40 @@
       // Change the window location to the URL of the page you want to open
       window.location.href = 'u4367u4453u4523u4361u4453u4527u4368u4453u4523u4368u4467-u4361u4462u4361u4469-u4370u4453u4523u4364u4462u4540.html';
     });
+
+    var reportConsultingButton = document.getElementById('report-consulting-button');
+
+    // Add click event listener to the div
+    reportConsultingButton.addEventListener('click', function () {
+      // Change the window location to the URL of the page you want to open
+      window.location.href = 'u4361u4450u4540u4352u4469u4359u4462-u4367u4453u4523u4361u4453u4527u4368u4469u4540-u4361u4450u4520u4363u4451u4520.html';
+    });
+
+    var insideExamConsultingButton = document.getElementById('inside-exam-consulting-button');
+
+    // Add click event listener to the div
+    insideExamConsultingButton.addEventListener('click', function () {
+      // Change the window location to the URL of the page you want to open
+      window.location.href = 'u4361u4462u4361u4469-u4367u4453u4523u4361u4453u4527u4368u4469u4540.html';
+    });
+
+    var interviewConsultingButton = document.getElementById('interview-consulting-button');
+
+    // Add click event listener to the div
+    interviewConsultingButton.addEventListener('click', function () {
+      // Change the window location to the URL of the page you want to open
+      window.location.href = 'u4358u4455u4523u4364u4453u4536-u4367u4453u4523u4361u4453u4527u4368u4469u4540.html';
+    });
+
+    var highSchoolConsultingButton = document.getElementById('high-school-consulting-button');
+
+    // Add click event listener to the div
+    highSchoolConsultingButton.addEventListener('click', function () {
+      // Change the window location to the URL of the page you want to open
+      window.location.href = 'u4352u4457u4363u4469u4536-u4367u4453u4523u4361u4453u4527u4368u4469u4540.html';
+    });
+
+
   </script>
 </body>
 
